--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -1,6 +1,6 @@
 name: Infrastructure Destroy
 on:  
- workflow_dispatch:
+ workflow_:
     inputs:
         AWS_REGION:
             type: string
@@ -15,7 +15,6 @@ on:
             description: "Controls if terraform destroy job is enabled"
             type: boolean
             default: false
-            required: true
 
 jobs:
   generate-vars:
@@ -122,7 +121,7 @@ jobs:
           role-to-assume: ${{ needs.define_aws_role.outputs.AWS_IAM_ROLE }}
           role-skip-session-tagging: true
           role-session-name: deploy
-          aws-region: ${{ inputs.ENVIRONMENT }}
+          aws-region: ${{ inputs.AWS_REGION }}
           output-credentials: true
 
 
